--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <div class="column">
              <div class="bg-inf_1"></div>   
                 <div class="inf_1">
-                    <h1 class="white-txt">Noel Taylor</h1> 
+                    <h1 class="white-txt">Naomi Taylor</h1> 
                     <h3 class="fw-100 white-txt">Graphic & Web Designer</h3>
                     <img src="img/imgg.jpg" alt="" class="imgg">
                 </div>
                  
-
+ 
                 <div class="inf_2">
                     <div class="contact">
                         <h2 class="section-title"><i class="icon navy-bg white-txt circle fa-solid fa-user"></i>Contact Me</h2>
